# hhs-opendata

./: .gitignore  AGENTS.md  README.md
medicaid_analysis/: README.md  create_sample.py  main.py  pyproject.toml  run_multi_scale.py
medicaid_analysis/docs/: architecture.md  configuration.md  contributing.md  data_dictionary.md  fraud_guide.md  modules.md  sections.md
medicaid_analysis/eda/: __init__.py  cost_efficiency.py  high_value.py  summary.py  top_entities.py  trends.py
medicaid_analysis/fraud/: __init__.py  clustering.py  composite.py  cost_outliers.py  phantom.py  relationships.py  temporal.py  upcoding.py  velocity.py
medicaid_analysis/output/: 01_numeric_summary.csv  02_monthly_spending.csv  02_monthly_trends.csv  02_yearly_summary.csv  03_top_procedures.csv  04_top_providers.csv  05_cost_efficiency_percentiles.csv  06a_anomalies_zscore.csv  06b_anomalies_isolation_forest.csv  07_billing_monthly_by_type.csv  07_billing_vs_servicing.csv  08_concentration_metrics.csv  09_correlation_pearson.csv  09_correlation_spearman.csv  11_seasonal_patterns.csv  11_seasonality.csv  11_temporal_patterns.csv  12_highest_value_records.csv  14_hcpcs_categories.csv  15_pareto_stats.csv  16_billing_to_servicing.csv  17_statistical_tests.csv  18_spending_deciles.csv  19_beneficiary_intensity.csv  20_procedure_percentiles.csv  21_rolling_cumulative.csv  22_yoy_monthly.csv  22_yoy_totals.csv  23_procedure_cooccurrence.csv  24_cohort_summary.csv  25_spending_velocity.csv  26_claims_size_buckets.csv  27_specialization_summary.csv  28_multi_dim_outliers.csv  30_hcpcs_lifecycle.csv  (+2 more)
(+238 files in other folders)
